--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "hist3812.netlify.app"
+baseURL = "https://hist3812.netlify.app"
 languageCode = "en-us"
 title = "HIST 3812 @ Carleton_U"
 
